# ROOPLInt

./: Dockerfile  LICENSE  Makefile  README.md  ROOPLInt.cabal  ROOPLPP.cabal  stack.yaml
src/: AST.hs  Error.hs  ErrorMessages.hs  Exception.hs  ExceptionMessages.hs  Interpreter.hs  Parser.hs  ProgramInverter.hs  ROOPLInt.hs  ROOPLPP.hs  Stringify.hs  TypeChecker.hs
test/: ArrayAddition.rplpp  BinaryTreeArrayUsage.rplpp  Fibonacci.rplpp  FindMinMax.rplpp  LinkedListReversal.rplpp  Simple-inverted.rplpp  Simple.pal  Simple.rplpp  SimpleAdditionMethod.rplpp  SimpleArithmetic.rplpp  SimpleConditional.rplpp  SimpleLoop.rplpp  SimpleMethodCall.rplpp
test/result/: ArrayUsageExample.out  ArrayUsageExample.out.json  BinaryTree.out  BinaryTree.out.json  BinaryTreeArrayUsage.out  BinaryTreeArrayUsage.out.json  DoublyLinkedList.out  DoublyLinkedList.out.json  Fibonacci.out  Fibonacci.out.json  FindMinMax.out.json  LinkedList.out  LinkedList.out.json  LinkedListReversal.out.json  SimpleArithmetic.out.json  SimpleConditional.out  SimpleLoop.out  SimpleMethodCall.out  SimpleMethodCall.out.json
web/: LICENSE  execute.php  index.html  load.php  save.php
web/static/css/: playground.css
web/static/js/: playground.js
web/static/js/ace/: mode-roopl.js
