name:                 ROOPLInt
version:              0.1.0.0
synopsis:             ROOPL++ Interpreter
-- description:
license:              MIT
license-file:         LICENSE
homepage:             https://github.com/haysch/ROOPLInt
author:               Lasse Hay-Schmidt (interpreter/inverter) & Martin Holm Cservenka (backend)
maintainer:           lasse.hay.schmidt@gmail.com
category:             Language
-- copyright:
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10

executable ROOPLInt
  main-is:              ROOPLInt.hs
  other-modules:        AST
                      , ClassAnalyzer
                      , CodeGenerator
                      , Interpreter
                      , MacroExpander
                      , PISA
                      , Parser
                      , ProgramInverter
                      , ScopeAnalyzer
                      , TypeChecker
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
                      , text
                      , parsec
                      , mtl
                      , bytestring
                      , containers
                      , pretty-show
                      , pretty-simple
                      , split
  hs-source-dirs:       src
  default-language:     Haskell2010
